<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="cloud.artik.example.oauth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_txt" />

        <TextView
            android:id="@+id/textViewRedirectURI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/redirecturi_label_txt" />

        <EditText
            android:id="@+id/editTextRedirectURI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/redirecturi_label_txt" />

        <TextView
            android:id="@+id/textViewClientID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/clientid_label_txt" />

        <EditText
            android:id="@+id/editTextClientID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/clientid_label_txt" />

        <TextView
            android:id="@+id/textViewEndpointAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/endpointauth_label_txt" />

        <EditText
            android:id="@+id/editTextEndpointAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/endpointauth_label_txt" />

        <TextView
            android:id="@+id/textViewEndpointToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/endpointtoken_label_txt" />

        <EditText
            android:id="@+id/editTextEndpointToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="@string/endpointtoken_label_txt" />

        <Button
            android:id="@+id/btn_savesetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savesetting_btn_txt" />

    </LinearLayout>

</LinearLayout>
